Added eslint, github workflow and Makefile

--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
   "dependencies": {
     "commander": "^11.1.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0"
   }
 }
