--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,11 +5,8 @@ extends: airbnb-base
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {
+rules:
   no-console: 0
-  import/extensions:
-    - error
-    - ignorePackages
-    - js: always
+  import/extensions: 0
+  no-undef: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-}
